--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@mui/material": "^5.12.2",
     "next": "13.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
